Timeoff request modifications and report (#260)
* Feature (#259)

* Feature sub update (#5)

* update-subscription

new endpoint to update subscription ,created new subscription mapping table ,endpoint to calculate amount ,updated invoice html template and helper ,removed payment id in subscription table

* modified update endpoint

modified updated endpoint

* updated code structure

updated code structure

* modified get payment details

modified getPaymentDetails endpoint to handle illegalArgmentException

* removed payment_id

removed payment_id in subscription table in schema

* bug fixed in get payment

modified update and calculate endpoint ,bug fixed in getPaymentDetails

* update timeoff policy

modified time off policy create, edit ,and updated code reviewed changes

* update get timeoff filter

modified get timeoff filter based on roll and date

* updated timeoff policies

updated time off policies create,update,assign and modified user policy amount history trigger

* Merge changes update

* modified schema-timeoff-policy

modified trigger functions ,modified time off policies endpoints

* modified assign time off policy

removed entitled hours ,modified edit time off policy, modified assign policy set default calendar while creating user,

* update timeoff policies

modified update endpoint by adding groupids and user ids ,modified create user to set the default calendar to user ,modified create time off policy,removed entitled hours in entity

* modified timeOff request

modified timeoff request and update

* updated employee update status

modified employee update status and modified time off request create

* modified create timeoff policy

* modified timeOff policies

modified timeOf policies create,update and assign to achieve a user cannot have both annual and onthly policy

* modified status dropdown

modified status endpoint

* completed resetfrequency

completed resetfrequency dropdown endpoint

---------

Co-authored-by: unknown <you@example.c